# StatUS

./: README.md  performance_displays.ipynb  pyproject.toml  quickstart.ipynb  quickstart_recording_data.ipynb  quickstart_render_0.ipynb  quickstart_training.ipynb
data/ai/examples/: kha_alpha_size-5_players-2_0.keras
data/history/examples/: bigger_history_0.json  bigger_history_1.json  bigger_history_2.json  bigger_history_3.json  bigger_history_4.json  greendom_size-5_players-2.json
docs/doctrees/: aiPlayer.doctree  aiPlayers.doctree  autoPlayer.doctree  engine.doctree  environment.pickle  history.doctree  index.doctree
docs/html/: .buildinfo  aiPlayer.html  aiPlayers.html  autoPlayer.html  engine.html  genindex.html  history.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: aiPlayer.rst.txt  autoPlayer.rst.txt  engine.rst.txt  history.rst.txt  index.rst.txt
hexathello/: AutoPlayer.py  Engine.py  Game.py  aiPlayers.py  history.py  jable.py  printing.py  svgRender.py  utilities.py
