[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "StatUS"
version = "0.0.1"
authors = [
  { name="Evan Mason" }
]
description = "Machine learning automata"
keywords = ["Othello","Hexathello"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
